update end date and words

--- a/resume.tex
+++ b/resume.tex
@@ -42,11 +42,10 @@
 \subsection{Programming Languages}
 \textbullet{} Java\\
 \textbullet{} Python\\
-\textbullet{} Typescript/JavaScript\\
+\textbullet{} Typescript/Javascript\\
 \textbullet{} SQL\\
 \textbullet{} R\\
 \textbullet{} Matlab\\
-\textbullet{} HTML/CSS\\
 \textbullet{} Rust (learning)\\
 
 \sectionsep % Some whitespace after the section
@@ -95,11 +94,11 @@
 
 \runsubsection{Encipher}
 \descript{| Principal Software Engineer}
-\location{Oct 2022 - Present | Houston, TX (Remote)}
+\location{Oct 2022 - July 2023 | Houston, TX (Remote)}
 \sectionsep
 
 \begin{tightemize}
-\item Designed the system architecture, and led a small but mighty engineering team in the implementation of Encipher's flagship product, InfinityVAULT, a trustless role-based secure data storage and permissioning system.
+\item Designed the system architecture, and led a five-person engineering team in the implementation of Encipher's flagship product, InfinityVAULT, a trustless role-based secure data storage and permissioning system.
 \item Designed the gRPC interface and data-modeling between the Python backend server, Cassandra database, and multiple frontend clients: React App, Microsoft Office Plug-In, Desktop Client. Built the backend server and React App, while leading other developers on the development of the other clients.
 \item Setup the architecture for an asynchronous task workflow orchestrator to improve the performance and scalability of the product.
 \item Coordinated with executive leaders and stakeholders on product requirements and deliverables.
@@ -212,8 +211,7 @@
 \begin{tightemize}
 \item Allow users to create group chats with friends, and an AI personality.
 \item Motivation: Group chats are fun, but it's easy to lose context and forget what people have said in the past. ChatGPT is awesome, but I want my friends to join in the conversation too.
-\item Tech Stack: React Native (Typescript), Supabase.js with Postgres.
-\item Future Plans: Use Pinecone DB for conversation context storage.
+\item Tech Stack: React Native (Typescript), Supabase.js with Postgres (iOS Beta available on TestFlight).
 \end{tightemize}
 \sectionsep % Some whitespace after the section
 
